Updated manifest and branding to reflect fork and incremented version

--- a/pi/main_pi.html
+++ b/pi/main_pi.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>io.moeritz.streamdeck.toggl.pi</title>
+  <title>one.blueshift.streamdeck.toggl.pi</title>
   <link rel="stylesheet" href="sdpi.css">
   <script src="main_pi.js"></script>
   <style>
@@ -63,14 +63,13 @@
         <summary class="sdpi-item-value">
           <div class="sdpi-item-child"><a onclick="openPage('track.toggl.com/timer')">Open Toggl</a></div>
           <div class="sdpi-item-child" style="margin-top: -6px"><a onclick="openPage('track.toggl.com/profile')">Get Toggl API Token</a></div>
-          <div class="sdpi-item-child" style="margin-top: -2px"><a onclick="openPage('discord.gg/YWy3UAy')">Discord</a></div>
-          <div class="sdpi-item-child" style="margin-top: -6px"><a onclick="openPage('github.com/tobimori/streamdeck-toggl')">GitHub</a></div>
+          <div class="sdpi-item-child" style="margin-top: -6px"><a onclick="openPage('github.com/blueshiftone/streamdeck-toggl')">GitHub</a></div>
         </summary>
       </details>
     </div>
     <div class="sdpi-item">
       <details class="message">
-        <summary style="margin-top: -10px">A project by <a onclick="openPage('moeritz.io')">tobimori</a></summary>
+        <summary style="margin-top: -10px">A project by <a onclick="openPage('github.com/blueshiftone')">Blueshift</a></summary>
       </details>
     </div>
   </div>
