--- a/plugin/main.html
+++ b/plugin/main.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>io.moeritz.streamdeck.toggl</title>
+    <title>one.blueshift.streamdeck.toggl</title>
     <meta charset="utf-8" />
     <script src="main.js"></script>
 </head>
