Fixed alignment issues in property inspector

--- a/pi/main_pi.html
+++ b/pi/main_pi.html
@@ -59,17 +59,11 @@
       </select>
     </div>
     <div class="sdpi-item">
-      <details class="message info">
-        <summary class="sdpi-item-value">
-          <div class="sdpi-item-child"><a onclick="openPage('track.toggl.com/timer')">Open Toggl</a></div>
-          <div class="sdpi-item-child" style="margin-top: -6px"><a onclick="openPage('track.toggl.com/profile')">Get Toggl API Token</a></div>
-          <div class="sdpi-item-child" style="margin-top: -6px"><a onclick="openPage('github.com/blueshiftone/streamdeck-toggl')">GitHub</a></div>
-        </summary>
-      </details>
-    </div>
-    <div class="sdpi-item">
-      <details class="message">
-        <summary style="margin-top: -10px">A project by <a onclick="openPage('github.com/blueshiftone')">Blueshift</a></summary>
+      <details>
+        <summary>Links</summary>
+        <div class="sdpi-item-child"><a onclick="openPage('track.toggl.com/timer')">Open Toggl</a></div>
+        <div class="sdpi-item-child" style="margin-top: -6px"><a onclick="openPage('track.toggl.com/profile')">Get Toggl API Token</a></div>
+        <div class="sdpi-item-child" style="margin-top: -6px"><a onclick="openPage('github.com/blueshiftone/streamdeck-toggl')">GitHub</a></div>
       </details>
     </div>
   </div>
